# askISTANBUL

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/cleaned/: istanbul.json  istanbul_airport.json  istanbul_asian_bosphorus.json  istanbul_bosphorus.json  istanbul_eastern_suburbs.json  istanbul_european_bosphorus.json  istanbul_galata.json  istanbul_historical_peninsula.json  istanbul_kadikoy.json  istanbul_kadıköy.json  istanbul_new_city.json  istanbul_princes_islands.json  istanbul_rural.json  istanbul_sile.json  istanbul_western_suburbs.json  istanbul_with_children.json  sabiha_gökçen_international_airport.json
data/eval/: qa_draft.jsonl  qa_draft_with_relevant_chunks.jsonl
results/: ablation.json  ablation_all_20260607_215510.json  ablation_full_20260607_165503.json  ablation_pilot.json  eval_20260602_211658.json  eval_20260602_213346.json  eval_20260602_213835.json  eval_20260607_215312.json
scripts/: run_full_eval.sh
src/: chunker.py  embedder.py  preprocess.py  retriever.py  scraper.py
src/askistanbul/: __init__.py  chunker.py  config.py  embedder.py  models.py  paths.py  pipeline.py  preprocess.py  rag.py  reranker.py  retriever.py  scraper.py
src/askistanbul/api/: __init__.py  server.py
src/askistanbul/api/static/: index.html
src/askistanbul/eval/: __init__.py  ablation.py  auto_label.py  error_analysis.py  evaluator.py  metrics.py
src/askistanbul/generator/: __init__.py
src/askistanbul/generator/adapter/: OllamaClient.py  OpenRouterClient.py  __init__.py
tools/: label_reviewer.html
(+4 files in other folders)
